<resources>
    <string name="app_name">CareerMatcher Pro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--privacy policy text-->
    <string name="first_heading"><b>Privacy Policy for Career Matcher Pro</b>\nAt Career Matcher Pro, one of our main priorities is the privacy of our visitors.This Privacy Policy document contains types of information that is collected and recorded by Career Matcher Pro and how we use it.If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</string>
    <string name="second_heading"><b>\nLog Files</b>\nCareer Matcher Pro follows a standard procedure of using log files. These files log visitors when they use app. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the app, tracking users\' movement on the app, and gathering demographic information.</string>
    <string name="third_heading"><b>\nPrivacy Policies</b>\nYou may consult this list to find the Privacy Policy for each of the advertising partners of Career Matcher Pro. Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Beacons that are used in their respective advertisements and links that appear on Career Matcher Pro. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on this app or other apps or websites. Note that Daily Ayah has no access to or control over these cookies that are used by third-party advertisers.</string>
    <string name="fourth_heading"><b>\nThird Party Privacy Policies</b>\nTrodev\'s Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options.</string>
    <string name="fifth_heading"><b>\nChildren\'s Information</b>\nAnother part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity. Career Matcher Pro does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our App, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</string>
    <string name="sixth_heading"><b>\nConsent</b>\nBy using our app, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.</string>

    <string name="start">Open</string>
    <string name="close">Close</string>
    <string name="cv_header">👉👉 CV মেকারে আপনাকে স্বাগতম!! </string>
    <string name="cv_price">💸💸 আমাদের CV মেকার চার্জ মাত্র ২০ টাকা।</string>
    <string name="cv_delivery_time">⌚⌚ আপনি এই CV ২৪ ঘণ্টার মধ্য আপনার G-mail এ পেয়ে যাবেন।</string>
    <string name="cv_string">👉👉 আপনি যদি খুব কম সময়ে CV বানাতে চান তাহলে আমরাই দিচ্ছি ডিজিটাল CV মেকার সিস্টেম সুবিধা। এই-জন্য আপনাকে সামান্য চার্জ পরিশোধ করতে হবে। আমাদের থেকে পিডিএফ ফাইল এবং ওয়ার্ড ফাইল পাবেন। </string>
    <string name="cv_notice">📝 CV অর্ডার করতে হলে আপনাকে নিম্মলিখিত কিছু তথ্য দিয়ে সাহায্য করতে হবে 📝 </string>
    <string name="cv_payment_number">💰💰<b> পেমেন্ট মেথড</b>💰💰\n01615257555 (বিকাশ, নগদ, রকেট)</string>
    <string name="copyright">© Copyright 2021-2023 Trodev, all right reserved.</string>

    <string name="about_us_one">Welcome to Career Matcher Pro – your ultimate companion in the journey of finding your dream job! Our innovative job seeker application is designed to provide you with a comprehensive platform to explore a world of opportunities. From detailed job descriptions, captivating images, to informative PDF files, we offer an immersive experience that goes beyond traditional job search.</string>
    <string name="premium_text">Career Matcher Pro আপনাদের জন্য নিয়ে এলো বিসিএস সহ সকল সরকারি চাকরিজীবীদের পরীক্ষার প্রস্তুতির জন্য সকল ধরনের মডেল টেস্ট এবং MCQ সমাধান। সেই সাথে নিয়ে এসেছে রিটেন পরীক্ষার প্রস্তুতি সহ সকল পিডিএফ</string>
    <string name="notice">১। পেমেন্ট করার ৩০ মিনিট এর মধ্য আপনার কাঙ্ক্ষিত ফাইল আপনি আপনার মেইল এ পেয়ে যাবেন।\n২। পেমেন্ট করার পরে আপনাকে আমাদের একজন প্রতিনিধি কল করে বিস্তারিত জানাবেন।\n৩। পেমেন্ট বা আমাদের অ্যাপ সম্পর্কিত কোন তথ্য জানতে আমাদের উক্ত নাম্বারে যোগাযোগ করুন (+8801615257555)</string>
    <string name="basic_package">প্রিমিয়াম পিডিএফ ফাইলের প্রথম 1-10 টা পিডিএফ (সব গুলোর ১ টা করে প্রথম ১ টি পাবেন)\n2 টা প্রিমিয়াম টেমপ্লেট (সিভি)\n1 টা প্রিমিয়াম প্রেজেন্টেশন স্লাইড\n\nRules:-\n১. যতবার কিনুন না কেনো সেম জিনিস ই বার বার পাবেন \n২. পেমেন্ট করার সময় ট্রানজেকসন আইডি সম্পূর্ণ নির্ভুল হতে হবে \n৩. পেমেন্ট মেথড সম্পূর্ণ লিখতে হবে। \n৪. পেমেন্ট করার ৩০ মিনিট এর মধ্য সকল কিছুই পেয়ে যাবেন ডাউনলোড করে রাখতে পারবেন। পরবর্তীতে যাতে পড়তে পারেন।</string>
    <string name="gold_packages">প্রিমিয়াম পিডিএফ ফাইলের প্রথম 100 টা পিডিএফ (সব গুলোর ১০ টা করে প্রথম ১০ টি পাবেন)\n ৫ টা প্রিমিয়াম টেমপ্লেট (সিভি)\n ৫ টা প্রিমিয়াম প্রেজেন্টেশন স্লাইড।\n\n Rules:-\n ১. যতবার কিনুন না কেনো সেম জিনিস ই বার বার পাবেন\n ২. পেমেন্ট করার সময় ট্রানজেকসন আইডি সম্পূর্ণ নির্ভুল হতে হবে\n ৩. পেমেন্ট মেথড সম্পূর্ণ লিখতে হবে।\n ৪. পেমেন্ট করার ৩০ মিনিট এর মধ্য সকল কিছুই পেয়ে যাবেন ডাউনলোড করে রাখতে পারবেন। পরবর্তীতে যাতে পড়তে পারেন।</string>
    <string name="platinum_packages">1st time payment \n প্রিমিয়াম পিডিএফ ফাইলের প্রথম 200 টা পিডিএফ (সব গুলোর ২০ টা করে প্রথম ২০ টি পাবেন।) (1-20) \n১০ টা প্রিমিয়াম টেমপ্লেট (সিভি) \n১০ টা প্রেজেন্টেশন স্লাইড \n\n2nd payment \nপ্রিমিয়াম পিডিএফ ফাইলের পরের 200 টা পিডিএফ (সব গুলোর পরের ২০ টা করে পাবেন।) (20-40) \n১২ টা প্রিমিয়াম টেমপ্লেট (সিভি) \n১২ টা প্রেজেন্টেশন স্লাইড \n\n3rd payment \nপ্রিমিয়াম পিডিএফ ফাইলের পরের 200 টা পিডিএফ (সব গুলোর পরের ২০ টা করে পাবেন।) (40-60) \n১৪ টা প্রিমিয়াম টেমপ্লেট (সিভি) \n১৪ টা প্রেজেন্টেশন স্লাইড \n\nRules:- \n১. প্লাটিনাম প্যাকেজ এ আপনি ২য়, ৩য় বা যত-বার ক্রয় করিলে প্রথম ৪০ টি করে ৪০০ টি পিডিএফ পাবেন। কিন্তু সেক্ষেত্রে আপনার জিমেইল এবং মোবাইল নাম্বার সেম থাকতে হবে। (সেক্ষেত্রে আমাদের পিডিএফ ফাইল অ্যাপে থাকতে হবে নতুবা আপনাকে রিফান্ড করা হবে।) \n২. পেমেন্ট করার সময় ট্রানজেকসন আইডি সম্পূর্ণ নির্ভুল হতে হবে \n৩. পেমেন্ট মেথড সম্পূর্ণ লিখতে হবে। \n৪. পেমেন্ট করার ৩০ মিনিট এর মধ্য সকল কিছুই পেয়ে যাবেন ডাউনলোড করে রাখতে পারবেন। পরবর্তীতে যাতে পড়তে পারেন।</string>
    <string name="master_packages">8 month access \nAll premium pdf (unlimited), when arrive new pdf file in 8 months you get all pdf file in your gmail. it for master packages (only). \n৮০ টা প্রিমিয়াম টেমপ্লেট (সিভি) \n৫০ টা প্রেজেন্টেশন স্লাইড \n\n Rules:- \n১. মাস্টার প্যাকেজ আপনি একবার ক্রয় করলে ৮ মাসে আমরা যত প্রিমিয়াম পিডিএফ দিবো সকল পিডিএফ আপনি সাথে সাথে জিমেইল এ পেয়ে যাবেন (১ মাস পর পর সর্বপ্রথম এই প্যাকেজধারি ইউজাররা পাবেন)। \n২. পেমেন্ট করার সময় ট্রানজেকসন আইডি সম্পূর্ণ নির্ভুল হতে হবে \n৩. পেমেন্ট মেথড সম্পূর্ণ লিখতে হবে। \n৪. পেমেন্ট করার ৩০ মিনিট এর মধ্য সকল কিছুই পেয়ে যাবেন ডাউনলোড করে রাখতে পারবেন। পরবর্তীতে যাতে পড়তে পারেন।</string>
    <string name="pay">১। পেমেন্ট করার ৩০ মিনিট এর মধ্য আপনার কাঙ্ক্ষিত ফাইল আপনি আপনার মেইল এ পেয়ে যাবেন। \n২। পেমেন্ট করার পরে আপনাকে আমাদের একজন প্রতিনিধি কল করে বিস্তারিত জানাবেন। \n৩। আপনার ইমেইল এবং মোবাইল নাম্বার সঠিক লিখুন, আপনার দেওয়া জিমেইল এ আপনার প্যাকেজ ফাইলটি যাবে। \n৪। পেমেন্ট বা আমাদের অ্যাপ সম্পর্কিত কোন তথ্য জানতে আমাদের উক্ত নাম্বারে যোগাযোগ করুন (+8801615257555) অথবা আমাদের ইমেইল করুন careermatcherpro@gmail.com</string>
    <string name="mcq_text">Career Matcher Pro এর MCQ পার্টে আপনারা পাচ্ছেন সর্বাধিক প্রিলিমিনারি পরীক্ষার প্রস্তুতি, এই MCQ অংশে রয়েছে প্রচুর পরিমানে প্রশ্ন এবং মডেল টেস্ট, যা আপনার সকল চাকরির প্রস্তুতিকে একধাপ আর এগিয়ে নিতে সাহায্য করবে।</string>

</resources>